--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
         </div>
 
         <div class="footer">
-            <h2>© Created by : Anorax</h2>
+            <h2>© Created by : <a href="https://github.com/aizen322" target="_blank"><img src="github-mark.png" alt="github logo" id="github-logo">Anorax</a>
+                
+            </h2>
         </div>
     </body>
 </html>
